# Challenge_SISE

./: .env  README.md  config.py  drawing.py  fonts.py  gesture.py  hand_tracker.py  image_completer.py  image_generator.py  image_window.py  llm_providers.py  main.py  mistral_enhance.py  pyproject.toml  renderer.py  requirements.txt  shape_detector.py  test_capture_webcam.ipynb  ui.py  webcam_tracker.py
Classification_Image/: collect_data.py  pyproject.toml  train_mlp.py
Classification_Image/models/: face_mlp.pt  meme_labels.json  meme_mlp.pt
projet_avec_train/: train_mlp.py  webcam_tracker.py
projet_avec_train/data/: combined_data.csv
projet_avec_train/models/: face_labels.json  meme_labels.json  meme_mlp.pt
